--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -15,10 +15,10 @@
         <h1 class="display-4 text-center py-1"> REJA va MAQSADLAR</h1>
 
         <div class="jumbotron p-3 shadow-sm">
-            <form id="creat-form" action="/create-item" method="post">
+            <form id="create-form" action="/create-item" method="post"> <!--form dan input bolayotgan datalar action orqalicreat-iteamga yonaltiriladi-->  
                 <div class="d-flex aligin-items-center">
                     <input
-                    id="creat-field"
+                    id="create-field"
                     style="flex: 1;"
                     class="form-control mr-3"
                     autocomplete="off"
@@ -39,10 +39,12 @@
                    <span
                    class="item-text"><%=item.reja%></span>
                    <div>
-                       <button data-id="<%=item._id%>" class="edit-me btn btn-secondary btn-sm mr-1">
+                       <button data-id="<%=item._id%>" 
+                        class="edit-me btn btn-secondary btn-sm mr-1">
                            Ozgartirish
                        </button>
-                       <button data="<%=item._id%>" class="delete-me btn btn-danger btn-sm">Ochirish</button>
+                       <button data="<%=item._id%>" 
+                        class="delete-me btn btn-danger btn-sm">Ochirish</button>
                    </div>
                </li>
                <% }) %>
@@ -51,5 +53,7 @@
                 Hamma Rejalarni O'chirish
             </button>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
 </body>
 </html>
