--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -39,12 +39,18 @@
                    <span
                    class="item-text"><%=item.reja%></span>
                    <div>
-                       <button data-id="<%=item._id%>" 
-                        class="edit-me btn btn-secondary btn-sm mr-1">
+                       <button 
+                        data-id="<%=item._id%>" 
+                        class="edit-me btn btn-secondary btn-sm mr-1"
+                        >
                            Ozgartirish
                        </button>
-                       <button data="<%=item._id%>" 
-                        class="delete-me btn btn-danger btn-sm">Ochirish</button>
+                       <button 
+                        data-id="<%=item._id%>" 
+                        class="delete-me btn btn-danger btn-sm"
+                        >
+                        Ochirish
+                    </button>
                    </div>
                </li>
                <% }) %>
